--- a/package.json
+++ b/package.json
@@ -4,16 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "debug": "DEBUG=puppeteer,puppeteer:cpPython node index.js",
-    "debugFull": "DEBUG=puppeteer:*, node index.js"
+    "start": "node index.js"
   },
   "author": "benroe",
   "license": "ISC",
   "dependencies": {
-    "cron": "^1.8.2",
-    "debug": "^4.1.1",
-    "jimp": "^0.9.5",
-    "puppeteer-core": "2.1.1"
+    "puppeteer-core": "^21.2.1"
   }
 }
