--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,7 @@ jobs:
               ADDITIONAL_PARAMETERS="--push"
               echo $DOCKERPASS | docker login --username $DOCKERLOGIN --password-stdin
             fi
-            docker buildx build $ADDITIONAL_PARAMETERS --platform linux/arm/v6,linux/arm/v7,linux/arm64/v8,linux/amd64 -t msroest/rpi-magicmirror-eink:latest -t msroest/rpi-magicmirror-eink:$TAG .
+            docker buildx build $ADDITIONAL_PARAMETERS --platform linux/arm/v7,linux/arm64/v8,linux/amd64 -t msroest/rpi-magicmirror-eink:latest -t msroest/rpi-magicmirror-eink:$TAG .
             
             docker images
             if [ "${CIRCLE_BRANCH}" == "main" ]; then
